--- a/Untitled-2.html
+++ b/Untitled-2.html
@@ -6,14 +6,8 @@
    <meta content="width=device-width, initial-scale=1.0">
    <title>Document</title>
 </head>
-<body>
-   <style>
-      body{
-         margin: 0;
-      }
-
-   </style>
-   <p id = "button">Hallo world</p>  
+<body> 
+   <form name = ""></form>
    <script src="Untitled-1.js"></script>
 </body>
 </html>
