--- a/Untitled-2.html
+++ b/Untitled-2.html
@@ -13,7 +13,7 @@
    <div id="createBlock">
       <h3>Створення депутатів</h3>
       <form name="deputy">
-         <input type="text" name="name" placeholder="name">
+         <input type="textя" name="name" placeholder="name">
          <input type="text" name="surname" placeholder="surname">
          <input type="number" name="ages" placeholder="ages">
          <input type="text" name="desk" placeholder="desk">
