--- a/Untitled-2.html
+++ b/Untitled-2.html
@@ -13,7 +13,7 @@
    <div id="createBlock">
       <h3>Створення депутатів</h3>
       <form name="deputy">
-         <input type="textя" name="name" placeholder="name">
+         <input type="text" name="name" placeholder="name">
          <input type="text" name="surname" placeholder="surname">
          <input type="number" name="ages" placeholder="ages">
          <input type="text" name="desk" placeholder="desk">
@@ -34,10 +34,17 @@
          <input type="number" name="ages" placeholder="ages">
          <input type="button" value="create" name="addPoliceman">
       </form>
-      <div id = "deputyBlock">
-         <h1>
-            Депутати верховної ради
-         </h1>
+      <h1>
+         Законопроекти
+      </h1>
+      <div id="lawList">
+
+      </div>
+      <h1>
+         Депутати верховної ради
+      </h1>
+      <div id="deputyBlock">
+
       </div>
    </div>
    <script src="Dom.js"></script>
