--- a/Untitled-2.html
+++ b/Untitled-2.html
@@ -44,7 +44,11 @@
          Депутати верховної ради
       </h1>
       <div id="deputyBlock">
-
+      </div>
+      <h1>
+         Олігархи
+      </h1>
+      <div id="oligarchBlock">
       </div>
    </div>
    <script src="Dom.js"></script>
