--- a/Untitled-2.html
+++ b/Untitled-2.html
@@ -50,6 +50,11 @@
       </h1>
       <div id="oligarchBlock">
       </div>
+      <h1>
+         Поліція
+      </h1>
+      <div id="police">
+      </div>
    </div>
    <script src="Dom.js"></script>
    <script src="Untitled-1.js"></script>
